--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     rev: 5.13.2
     hooks:
     -   id: isort
-        args: ["--profile", "black", "--filter-files", "--add-import", "from __future__ import annotations", "--combine-as"]
+        args: ["--profile", "black", "--filter-files", "--combine-as"]
 
 -   repo: https://github.com/pycqa/flake8
     rev: 7.1.1
